--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+kdl = "3.0.0"
 log = "0.4.14"
 mio = "0.7.14"
 nix = "0.23.0"
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0.130", features = ["derive"] }
+serde_kdl = "0.1.0"
 thiserror = "1.0.30"
 tokio = { version = "1.12.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 toml = "0.5.8"
