--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "lefthk"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 kdl = "3.0.0"
 log = "0.4.14"
@@ -17,3 +15,6 @@ thiserror = "1.0.30"
 tokio = { version = "1.12.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 x11-dl = "2.19.1"
 xdg = "2.4.0"
+
+[dev-dependencies]
+tempfile = "3.2.0"
