--- a/lefthk/Cargo.toml
+++ b/lefthk/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 [dependencies]
 clap = "2.3.0"
 kdl = "3.0.0"
-lefthk-core = { path = "../lefthk-core" }
+lefthk-core = { path = "../lefthk-core"}
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0.130", features = ["derive"] }
@@ -14,6 +14,9 @@ serde_kdl = "0.1.0"
 thiserror = "1.0.30"
 tokio = { version = "1.14.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 xdg = "2.4.0"
+
+[features]
+watcher = ["lefthk-core/watcher"]
 
 [dev-dependencies]
 tempfile = "3.2.0"
