--- a/lefthk/Cargo.toml
+++ b/lefthk/Cargo.toml
@@ -10,7 +10,7 @@ description = "A hotkey daemon for Adventurers"
 [dependencies]
 clap = "2.3.0"
 kdl = "3.0.0"
-lefthk-core = { path = "../lefthk-core"}
+lefthk-core = { path = "../lefthk-core", version = '0.1.0'}
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0.130", features = ["derive"] }
