--- a/lefthk-core/Cargo.toml
+++ b/lefthk-core/Cargo.toml
@@ -11,6 +11,7 @@ description = "A hotkey daemon for Adventurers"
 log = "0.4.14"
 mio = "0.8.0"
 nix = "0.23.0"
+signal-hook = "0.3.4"
 thiserror = "1.0.30"
 tokio = { version = "1.14.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 x11-dl = "2.19.1"
