--- a/lefthk/Cargo.toml
+++ b/lefthk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lefthk"
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
 license = "BSD-3-Clause"
 readme = "README.md"
@@ -9,14 +9,13 @@ description = "A hotkey daemon for Adventurers"
 
 [dependencies]
 clap = "2.3.0"
-kdl = "3.0.0"
-lefthk-core = { path = "../lefthk-core", version = '0.1'}
+lefthk-core = { path = "../lefthk-core", version = '0.1' }
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_kdl = "0.1.0"
+ron = "0.7"
+serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.30"
-tokio = { version = "1.14.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
+tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
 xdg = "2.4.0"
 
 [dev-dependencies]
