--- a/lefthk-core/Cargo.toml
+++ b/lefthk-core/Cargo.toml
@@ -15,6 +15,8 @@ thiserror = "1.0.30"
 tokio = { version = "1.14.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 x11-dl = "2.19.1"
 xdg = "2.4.0"
+ron = "0.8.0"
+serde = { version = "1.0.145", features= ["derive"]}
 
 # logging
 tracing = "0.1.36"
