--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,9 +114,15 @@ jobs:
           sed "s/[0-9]*\\.[0-9]*\\.[0-9]*-git/${RELEASE_TAG##*\/v}/" Cargo.toml.origl2 > Cargo.toml
           mv Cargo.lock Cargo.lock.origl2
           sed "s/[0-9]*\\.[0-9]*\\.[0-9]*-git/${RELEASE_TAG##*\/v}/" Cargo.lock.origl2 > Cargo.lock
-      - name: Publish crate
+      - name: Publish core crate
         if: github.event_name == 'release'
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
-          cargo publish --allow-dirty
+          cargo publish --allow-dirty -p lefthk-core
+      - name: Publish binary crate
+        if: github.event_name == 'release'
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: |
+          cargo publish --allow-dirty -p lefthk
