--- a/lefthk-core/Cargo.toml
+++ b/lefthk-core/Cargo.toml
@@ -8,15 +8,24 @@ repository = "https://github.com/leftwm/lefthk"
 description = "A hotkey daemon for Adventurers"
 
 [dependencies]
+evdev-rs = { version = "0.6.1", features = ["serde"] }
 mio = "0.8.0"
-nix = {version = "0.27.1", features = ["fs", "signal"]}
+nix = { version = "0.27.1", features = ["fs", "signal"] }
 signal-hook = "0.3.4"
 thiserror = "1.0.30"
-tokio = { version = "1.14.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
+tokio = { version = "1.14.0", features = [
+  "fs",
+  "io-util",
+  "macros",
+  "net",
+  "rt-multi-thread",
+  "sync",
+  "time",
+] }
 x11-dl = "2.19.1"
 xdg = "2.4.0"
 ron = "0.8.0"
-serde = { version = "1.0.145", features= ["derive"]}
+serde = { version = "1.0.145", features = ["derive"] }
 inventory = "0.3.2"
 
 # logging
