--- a/lefthk-core/Cargo.toml
+++ b/lefthk-core/Cargo.toml
@@ -9,6 +9,7 @@ description = "A hotkey daemon for Adventurers"
 
 [dependencies]
 evdev-rs = { version = "0.6.1", features = ["serde"] }
+input = "0.8"
 mio = "0.8.0"
 nix = { version = "0.27.1", features = ["fs", "signal"] }
 signal-hook = "0.3.4"
