--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: apt update
       run: sudo apt update
-    - name: apt install libsystemd-dev
-      run: sudo apt install -y --no-install-recommends libsystemd-dev
+    - name: apt install libsystemd-dev libudev-dev
+      run: sudo apt install -y --no-install-recommends libsystemd-dev libudev-dev
     - name: Build
       run: cargo build --all-targets --all-features
     - name: Run tests
@@ -31,8 +31,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: apt update
       run: sudo apt update
-    - name: apt install libsystemd-dev
-      run: sudo apt install -y --no-install-recommends libsystemd-dev
+    - name: apt install libsystemd-dev libudev-dev
+      run: sudo apt install -y --no-install-recommends libsystemd-dev libudev-dev
     - name: Clippy
       run: cargo clippy --all-targets --all-features
 
